@@ -452,3 +452,30 @@ class TestBug(object):
         t = env.from_string('{% set x = 1 %}{% with x = 2 %}{% block y scoped %}'
                             '{{ x }}{% endblock %}{% endwith %}')
         assert t.render() == '2'
+
+    def test_recursive_loop_filter(self, env):
+        t = env.from_string('''
+        <?xml version="1.0" encoding="UTF-8"?>
+        <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
+          {%- for page in [site.root] if page.url != this recursive %}
+          <url><loc>{{ page.url }}</loc></url>
+          {{- loop(page.children) }}
+          {%- endfor %}
+        </urlset>
+        ''')
+        sm  =t.render(this='/foo', site={'root': {
+            'url': '/',
+            'children': [
+                {'url': '/foo'},
+                {'url': '/bar'},
+            ]
+        }})
+        lines = [x.strip() for x in sm.splitlines() if x.strip()]
+        print(lines)
+        assert lines == [
+            '<?xml version="1.0" encoding="UTF-8"?>',
+            '<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">',
+            '<url><loc>/</loc></url>',
+            '<url><loc>/bar</loc></url>',
+            '</urlset>',
+        ]
