@@ -8,6 +8,7 @@ Version 2.9.4
 - Solved some warnings for string literals.  (#646)
 - Increment the bytecode cache version which was not done due to an
   oversight before.
+- Corrected bad code generation and scoping for filtered loops.  (#649)
 
 Version 2.9.3
 -------------
